--- a/style.css
+++ b/style.css
@@ -7657,6 +7657,7 @@ body {
 // #masthead .site-header
 //====================================================================*/
 .site-header {
+  position: relative;
   padding-left: 0;
   padding-right: 0;
 }
@@ -7668,19 +7669,42 @@ body {
 }
 
 .site-branding {
-  padding: 50px 0 0;
   text-align: center;
 }
 
+.site-title-desc {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .site-title-desc {
+    top: 59px;
+  }
+}
+@media (min-width: 992px) {
+  .site-title-desc {
+    top: 114px;
+  }
+}
+
 .site-title {
-  font-size: 42px;
-  font-size: 4.2rem;
+  font-size: 30px;
+  font-size: 3.0rem;
   font-weight: normal;
-  margin: 0 0 15px 0;
+  margin: 0 0 10px 0;
+}
+@media (min-width: 768px) {
+  .site-title {
+    font-size: 42px;
+    font-size: 4.2rem;
+  }
 }
 
 .site-description {
-  margin: 0 0 50px;
+  line-height: 1;
+  margin: 0;
 }
 
 @media (min-width: 768px) {
@@ -7713,7 +7737,7 @@ body {
 }
 @media (min-width: 768px) {
   .content-area {
-    padding-left: 15px;
+    padding-left: 0px;
     padding-right: 15px;
   }
 }
@@ -8097,6 +8121,12 @@ body {
 /*======================================================================
 // #secondary .widget-area
 //====================================================================*/
+@media (min-width: 768px) {
+  .widget-area {
+    padding-right: 0;
+  }
+}
+
 .widget {
   margin: 0 0 3em;
 }
